; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp.c_mptcp_reset_itfinfo.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp.c_mptcp_reset_itfinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpt_itf_info = type { i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mpt_itf_info*)* @mptcp_reset_itfinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mptcp_reset_itfinfo(%struct.mpt_itf_info* %0) #0 {
  %2 = alloca %struct.mpt_itf_info*, align 8
  store %struct.mpt_itf_info* %0, %struct.mpt_itf_info** %2, align 8
  %3 = load %struct.mpt_itf_info*, %struct.mpt_itf_info** %2, align 8
  %4 = getelementptr inbounds %struct.mpt_itf_info, %struct.mpt_itf_info* %3, i32 0, i32 3
  store i64 0, i64* %4, align 8
  %5 = load %struct.mpt_itf_info*, %struct.mpt_itf_info** %2, align 8
  %6 = getelementptr inbounds %struct.mpt_itf_info, %struct.mpt_itf_info* %5, i32 0, i32 2
  store i64 0, i64* %6, align 8
  %7 = load %struct.mpt_itf_info*, %struct.mpt_itf_info** %2, align 8
  %8 = getelementptr inbounds %struct.mpt_itf_info, %struct.mpt_itf_info* %7, i32 0, i32 1
  store i64 0, i64* %8, align 8
  %9 = load %struct.mpt_itf_info*, %struct.mpt_itf_info** %2, align 8
  %10 = getelementptr inbounds %struct.mpt_itf_info, %struct.mpt_itf_info* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
